# terrapi

./: .gitignore  README.md  Untitled.ipynb  createDocu.sh  createDocu.sh~  createDocu.txt  environment.yml  micromambaList.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
conda/: meta.yaml
docs/: collection-create.md  collection-delete.md  collection-get.md  collection-list.md  collection-prefix.md  collection-update.md  item-create.md  item-delete.md  item-get.md  item-list.md  item-update.md  restricted-data-list-available.md  restricted-data-login.md  restricted-data-request-access.md  stac-auth.md  stac-collection.md  stac-item.md  stac-login.md  terrapi-restricted-data.md  terrapi-slurm.md  terrapi-stac.md  terrapi.md
docs/raw/: collection-create.md  collection-delete.md  collection-get.md  collection-list.md  collection-prefix.md  collection-update.md  item-create.md  item-delete.md  item-get.md  item-list.md  item-queryables.md  item-search.md  item-update.md  item-validate.md  restricted-data-auth.md  restricted-data-container-info.md  restricted-data-list-available.md  restricted-data-login.md  restricted-data-request-access.md  restricted-data-request-info.md  slurm-auth.md  slurm-login.md  stac-auth.md  stac-collection.md  stac-item.md  stac-login.md  terrapi-restricted-data.md  terrapi-slurm.md  terrapi-stac.md  terrapi.md
src/terrabyte_auth/: adapter.py  argparse_decorator.py  config.py  mystac.py  restricted_access_cli.py  settings.py  (+4 more)
test/: test_login_interactive.py  test_login_options_check.py  test_request.py  test_slurm_submit.py
(+44 files in other folders)
