[metadata]
name = terrapi
version = attr: terrapi.__version__
author = Julian Zeidler, Jonas Eberle, Fabian Schindler
author_email = terrabyte@dlr.de
license = MIT
description = cli tool and Python library to interact with Terrabyte APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DLR-terrabyte/terrapi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.9
install_requires =
    requests>=2.31.0
    urllib3>=2.0.2
    click>=8.1.7
    pyjwt>=2.8.0
    terminaltables

[options.packages.find]
where = src
exclude =
    tests

    
[options.entry_points]
console_scripts =
    terrapi = terrapi.cli.terrapi_cli:terrapi


# [options.package_data]
# terrabyte = *.json

[mypy]
exclude = (.tox|build|dist|.eggs|docs/conf.py|.venv|__init__.py|tests)
ignore_missing_imports = True

[flake8]
max-line-length = 90
exclude = .venv, build, tests
ignore = W503,E203
